styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --image-width: max(0px, calc(50% - 300px));
}

body {
  display: flex;
  font-family: "Caveat", cursive, Arial, Helvetica, sans-serif;
  overflow: hidden;
}

.image-holder {
  overflow: hidden;
}

img {
  display: block;
  max-width: 2000px;
  height: auto;
  position: absolute;
  left: 0;
  z-index: -1;
}

div.form-container {
  background-color: #f7f7f7;
  width: calc(100% - var(--image-width));
  padding: 0;
  margin-left: auto;
  height: 100vh;
  overflow-y: auto;
}

.form-container > div.propaganda {
  font-weight: bolder;
  font-size: 1.5rem;
  padding-top: 150px;
  padding-left: 48px;
  padding-right: 100px;
  padding-bottom: 72px;
  font-family: Arial, Helvetica, sans-serif;
}

form {
  width: 100%;
}

form h1 {
  margin: 12px 0 24px 24px;
}

form label {
  font-size: 0.7rem;
  letter-spacing: 1px;
  font-weight: 550;
  color: #444;
}

form div.input-fields {
  background-color: #FFF;
  width: 100%;
  padding: 20px;
  box-shadow: 2px 3px 5px rgb(207, 207, 207);
  margin-bottom: 30px;
}

form div.form-row {
  display: flex;
  flex-direction: row;
  gap: 150px;
  margin-left: 24px;
  flex-wrap: wrap;
  align-content: flex-start;
  align-items: fle;
}

form div.data-field {
  display: flex;
  flex-direction: column;
  gap: 2px;
  margin-bottom: 16px
}

form input {
  width: 240px;
  border: 1px solid #E5E5E5;
  border-radius: 4px;
  height: 30px;
  padding-left: 8px;
  padding-right: 8px;
}

form input:focus {
  outline: none;
  border-color: blue;
  box-shadow: 1px 1px 3px #999;
}

form input:invalid {
  outline: none;
  border-color: red;
  box-shadow: 1px 1px 3px #999;
}

form button {
  margin-left: 44px;
  background-color: #a3a4b9;
  color: white;
  text-shadow: 1px 1px 3px #f9e8ce;
  border: none;
  padding: 12px 36px;
  border-radius: 8px;
  box-shadow: 0px 2px 4px #CCC;
}

form button:hover {
  cursor: pointer;
}

div.logo-container {
  background-color: rgba(0, 0, 0, 0.308);
  padding: 50px;
  position: absolute;
  max-width: var(--image-width);
  min-width: var(--image-width);
  z-index: -1;
  top: 300px;
  font-weight: bolder;
  font-size: 5rem;
  text-align: center;
  color: white;
  font-family: "Caveat", cursive, Arial, Helvetica, sans-serif;
}

div.image-credit {
  position: absolute;
  max-width: var(--image-width);
  min-width: var(--image-width);;
  color: white;
  text-align: center;
  font-family: Arial, Helvetica, sans-serif;
  bottom: 5px;
  z-index: -1;
}

a {
  color: white;
}

